--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
         <span>o</span>
         <span>l</span>
         <span>a</span>
+        <span> </span>
+        <span>a</span>
+        <span>m</span>
+        <span>o</span>
+        <span>r</span>
         <span>!</span>
     </div>
     <div class="description">
-        <span>Ya no estés triste 💖😊</span>
+        <span>Quieres ver algo lindo? 💖😊</span>
     </div>
     <div class="button">
         <button class="botones">
-            <a href="flower.html" style="color: #fff;">¡Presiona para ya no estar triste!</a>
+            <a href="flower.html" style="color: #fff;">¡Presiona para verlo!</a>
         </button>
-    </div>
-
-    <!-- Créditos -->
-    <div class="credits">
-        <p>&copy; 2023 Aprende Con JS.</p>
     </div>
 </body>
 
